# QtLottie

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.rs
example/: Animation.json  CMakeLists.txt  main.cpp
include/qtlottie/: LottieWidget.h
qt_lottie_example/: Cargo.toml  build.rs
qt_lottie_example/src/: main.cpp
src/: LottieWidget.cpp
